Ensure proper paragraph and list spacing for Markdown.

--- a/stylesheets/_session.scss
+++ b/stylesheets/_session.scss
@@ -637,5 +637,30 @@ input {
 }
 
 .module-message__text {
+
   white-space: pre-wrap;
+
+  p {
+    display: inline-block;
+    margin-top: 0.4em;
+    margin-bottom: 0.25em;
+    line-height: 1.5;
+  }
+
+  ul, ol, blockquote {
+    margin-bottom: -0.5em;
+    white-space: normal;
+
+    p {
+      display: block !important;
+    }
+  }
+
+  pre {
+    margin-bottom: -0.5em;
+   }
+
+  * {
+    user-select: text;
+  }
 }
